# MavlinkGCS

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  mavlinkwrapper.cpp  mavlinkwrapper.h  sayhello.cpp  sayhello.h  worker_tick.cpp  worker_tick.h  xbee.cpp  xbee.h  xbee_helper.cpp
lib/: Charger.cpp  Charger.h  Charger_Base.cpp  Charger_Base.h  Comm_Base.cpp  Comm_Base.h  Comm_Dummy_8.cpp  Comm_Dummy_8.h  Comm_Serial.cpp  Comm_Serial.h  Comm_Wifi.cpp  Comm_Wifi.h  Data.h  Drone.cpp  Drone.h  Drone_Multicopter.cpp  Drone_Multicopter.h  Drone_Rover.cpp  Drone_Rover.h  Drone_base.cpp  Drone_base.h  Mavlink_8.cpp  Mavlink_8.h
lib/mavlink_beluga/ardupilotmega/: ardupilotmega.hpp  mavlink.h  version.h
lib/mavlink_beluga/beluga/: beluga.hpp  gtestsuite.hpp  mavlink.h  mavlink_msg_beluga_pn_sn.h  mavlink_msg_beluga_pn_sn.hpp  testsuite.h  version.h
lib/mavlink_beluga/common/: common.h  mavlink.h
lib/mavlink_beluga/csAirLink/: csAirLink.h  version.h
lib/mavlink_beluga/cubepilot/: mavlink.h  version.h
lib/mavlink_beluga/icarous/: icarous.h  version.h
lib/mavlink_beluga/standard/: mavlink.h  standard.h
lib/mavlink_beluga/uAvionix/: mavlink.h  uAvionix.h  uAvionix.hpp  version.h
lib/mavlink_ric/v2.0/ardupilotmega/: ardupilotmega.h  mavlink_msg_test_ric_msg.h  testsuite.h  version.h
lib/mavlink_ric/v2.0/icarous/: version.h
lib/mavlink_ric/v2.0/minimal/: version.h
lib/mavlink_ric/v2.0/uAvionix/: version.h
mavlink_lib/mavlink_beluga/ardupilotmega/: ardupilotmega.h
mavlink_lib/mavlink_beluga/beluga/: beluga.h
mavlink_lib/mavlink_beluga/common/: common.hpp  version.h
mavlink_lib/mavlink_beluga/csAirLink/: mavlink.h
mavlink_lib/mavlink_beluga/cubepilot/: cubepilot.h
mavlink_lib/mavlink_beluga/icarous/: mavlink.h
mavlink_lib/mavlink_beluga/minimal/: mavlink.h  minimal.h  version.h
mavlink_lib/mavlink_beluga/standard/: version.h
message_definitions/: ardupilotmega.xml  beluga.xml
xbee_lib/: msg_base_class.cpp  msg_base_class.h  msg_io_sample_indicator.cpp  msg_io_sample_indicator.h  msg_node_id_indicator.cpp  msg_node_id_indicator.h  msg_receive_packet.cpp  msg_receive_packet.h  msg_transmit_request.cpp  msg_transmit_request.h  xbee.cpp  xbee.h  xbee_helper.cpp  xbee_helper.h  xbee_module.cpp  xbee_module.h
